--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
 </head>
 <body>
   <div class="container-fluid navigation sticky-top">
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">
         <img src="./assets/logo.svg" width="40" height="40" alt="Logo">
       </a>
-      <ul class="navbar-nav flex-row">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cart</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login/Register</a>
-        </li>
-      </ul>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-content">
+        <ul class="navbar-nav ml-auto align-items-end">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Login/Register</a>
+          </li>
+        </ul>
+      </div>
     </nav>
   </div>
 
