--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       Loading...
   </div>
 
+  <footer>
+    <a href="#"><img src="./assets/Facebook@2x@2x.png" alt="Facebook Logo"></a>
+    <a href="#"> <img src="./assets/Instagram@2x@2x.png" alt="Instagram Logo"></a>
+  </footer>
+
   <!-- Modal -->
   <div id="modal--item-added-to-cart" class="modal fade" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
